k8s/namespace-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeguard
  labels:
    app: microservice
    team: s8ul
