k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeguard
  labels:
    app: kubeguard
    team: s8ul
