k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice
  namespace: kubeguard
  labels:
    app: microservice
spec:
  type: NodePort
  selector:
    app: microservice
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    nodePort: 30080
