k8s/services-advanced.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: kubeguard
  labels:
    app: microservice
    component: api-gateway
    team: s8ul
spec:
  type: NodePort
  selector:
    component: api-gateway
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    nodePort: 30081
---
apiVersion: v1
kind: Service
metadata:
  name: core-service
  namespace: kubeguard
  labels:
    app: microservice
    component: core-service
    team: s8ul
spec:
  type: ClusterIP
  selector:
    component: core-service
  ports:
  - name: http
    port: 8001
    targetPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: worker-service
  namespace: kubeguard
  labels:
    app: microservice
    component: worker-service
    team: s8ul
spec:
  type: ClusterIP
  selector:
    component: worker-service
  ports:
  - name: http
    port: 8002
    targetPort: 8002
